@@ -1,3 +1,10 @@
+2009-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/gui.c, src/scplugin.c, src/speller.c:
+   Use single header includes.
+   Use the global version macro to set the plugin's version.
+
+
 2009-06-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/gui.c:
